# Tubes1_OOP

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Tubes1_OOP  cmake_install.cmake  main.cpp  run.bat  run.sh  runMake.bat
src/Driver/: ContainerDriver.cpp  InputManagerDriver.cpp  RoundRobinDriver.cpp
src/class/Manager/GameManager/: GameManager.cpp  GameManager.hpp
src/class/Manager/InputManager/: InputManager.cpp  InputManager.hpp  driver.cpp
src/class/Manager/StateManager/: StateManager.cpp  StateManager.hpp
src/class/UI/: MainWindow.cpp  MainWindow.h
src/class/container/: container.cpp  container.hpp  driver.cpp
src/class/container/ladang/: ladang.cpp  ladang.hpp
src/class/container/penyimpanan/: penyimpanan.cpp  penyimpanan.hpp
src/class/container/peternakan/: peternakan.cpp  peternakan.hpp
src/class/exception/: GameException.hpp  InputException.hpp
src/class/exception/InputException/: InputException.hpp
src/class/gameData/: driver.cpp  gameData.cpp  gameData.hpp  main.cpp
src/class/gameManager/: gameManager.hpp
src/class/item/: item.cpp  item.hpp
src/class/item/building/: building.cpp  building.hpp
src/class/item/farmEntity/: farmEntity.cpp  farmEntity.hpp
src/class/item/farmEntity/animal/: animal.cpp  animal.hpp
src/class/item/farmEntity/plant/: plant.cpp  plant.hpp
src/class/item/product/: product.cpp  product.hpp
src/class/people/: people.cpp  people.hpp
src/class/people/Keuangan/: StatusKeuangan.cpp  StatusKeuangan.hpp
src/class/people/farmer/: farmer.cpp  farmer.hpp
src/class/people/mayor/: mayor.cpp  mayor.hpp
src/class/people/stockman/: stockman.cpp  stockman.hpp
src/class/statusKeuangan/: statusKeuangan.cpp  statusKeuangan.hpp
src/class/toko/: toko.cpp  toko.hpp
src/class/utils/DataConverter/: DataConverter.cpp  DataConverter.hpp
src/class/utils/matrix/: matrix.cpp  matrix.hpp
src/class/utils/roundRobin/: driver.cpp  roundRobin.hpp
